--- a/styles.css
+++ b/styles.css
@@ -29,19 +29,21 @@ header {
     display: flex;
     align-items: center;
     padding-left: 10px;
-}
-
-.logo a{
-    line-height: 0.6;
-    display: flex;
     text-decoration: none;
-    align-items: center;
     color: white;
+    font-size: 20px;
+    transition: all 500ms ease;
 }
 
-.logo h2{
-    margin-left: 30px;
+
+.logo:hover{
+    color:rgb(248, 189, 78); 
+    background-position: bottom;
+    background-size: 20%;
+    text-decoration: none;
 }
+
+
 
 .logo img{
     float: left;
@@ -60,6 +62,44 @@ nav a{
     display: inline;
     color: white;
     text-decoration: none;
+    transition: all 500ms ease;
+}
+
+nav a:hover{
+    color:rgb(248, 189, 78); 
+    border-bottom: 1px solid orange;
+    background-position: bottom;
+    background-size: 20%;
+    text-decoration: none;
+}
+
+.navegador{
+    display: flex;
+    background: rgba(0, 0, 0, 0.95);
+    justify-content: center;
+}
+
+.navegador a{
+    color: rgb(248, 189, 78);
+    text-align: center;
+}
+
+.navegador a:hover{
+    color:rgb(248, 189, 78); 
+    border-bottom: 1px solid orange;
+    background-position: bottom;
+    background-size: 20%;
+    padding-bottom: .3em;
+    text-decoration: none;
+}
+
+.navegador ul{
+    display: flex;
+    list-style-type: none;
+}
+
+.navegador ul li {
+    margin: 0 50px; /* Añade un poco de espacio entre los elementos de la lista */
 }
 
 
@@ -87,16 +127,18 @@ nav a{
     width: 400px;
     border-radius: 40px;
     text-align: center;
-    box-shadow: 0px 0px 5px #f7d462;
+    box-shadow: 0px 0px 5px #000000c5;
     background-color: rgb(255, 255, 255);
     transition: all 500ms ease;
 }
 
 #productos .prodserv .card:hover{
-    box-shadow: 0px 0px 35px #ffc506;
+    box-shadow: 0px 0px 35px #000000;
     /*transform: translateY(-3%);*/
     transform:scale(1.01 , 1.01);
 }
+
+
 
 #productos .card .texto{
     margin-left: 2%;
@@ -124,12 +166,6 @@ nav a{
 }
 
 
-#productos .prodserv .card:hover {
-    box-shadow: 0px 0px 35px #ffc506;
-    transform: scale(1.01, 1.01);
-
-}
-
 #productos .prodserv .card:hover .cambiar-color {
     color: red;
 }
@@ -154,185 +190,71 @@ nav a{
 
 /*Fin de productos y servicios*/
 
-/*Empresa como tal*/
+/* Banner de articulos promocionales*/
 
-#empresa {
+.separador{
     width: 100%;
-    max-height: 100vh;
+    height: 50px;
 }
 
-#empresa .empresa{
-    height: 100%;
-    min-height: 600px;
-    max-height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    overflow: hidden;
-}
 
-#empresa .empresa img{
-    max-height: 600px;
-    padding-right: 50px;
-    padding-top: 5%;
-    transition: all 200ms ease;
-}
-
-#empresa .empresa img:hover{
-    filter: drop-shadow(0px 0px 20px);
-}
-
-#empresa .empresa .card{
-    background-color: rgba(0, 0, 0, 0.829);
-    text-align: center;
-    color:white;
-}
-
-#empresa .empresa .card .texto{
-    text-align: justify;
-    line-height: 1.7;
-}
-
-#empresa .empresa .card .texto h2{
-    padding-top: 20px;
-    text-align: center;
-}
-
-#empresa .empresa .card .texto p{
-    padding: 0px 40px 50px 40px;
-    font-size: 14px;
-}
-
-#empresa .empresa .card .texto .obj{
-    padding: 0px 40px 50px 40px;
-    font-size: 14px;
-    line-height: 2;
-}
-
-#empresa .empresa .card .texto ul{
-    font-size: 14px;
-}
-
-#empresa .empresa .card .texto ul li{
-    text-decoration: none;
-    line-height: 2;
-}
-
-/*Fin de empresa como tal*/
-
-/*About Us*/
-#title{
-    padding-top: 10px;
-    color: black;
-    text-align: center;
-}
-
-#title{
-    text-shadow: 5px 4px 8px rgb(175, 143, 0);
-    font-size: 30px;
-}
-
-#title h1{
-    display: inline-block;
-    padding: 8px 16px;
-    color: black;
-    background-color: rgb(255, 255, 255, 0.8);
-    border-style: solid ridge;
-    border-color: black;
-    border-radius: 30px;
-}
-
-.nosotros {
-    display: grid;
+#one .banner{
+    width: 100%;
+    height: 500px;
+    background: linear-gradient(131deg, rgba(255, 166, 0, 0.95), rgba(0, 0, 0, 0.95) 50%);
+    display: flex;
+    align-items: center;
     justify-content: center;
-    min-height: 300px;
-    margin-bottom: 5%;
+    gap: 50px;
 }
 
-.nosotros div{
-    color: black;
-    width: 1000px;
-    background: white;
-    margin: 20px;
-    padding: 20px;
+#two .banner{
+    width: 100%;
+    height: 500px;
+    background: linear-gradient(131deg, rgba(0, 0, 0, 0.95) 50%, rgb(255, 0, 0, 0.95) 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
 }
 
-div #mision{
-    border-radius: 40px;
-    box-shadow: 0px 0px 20px #668b00;
-    line-height: 1.4;
+#three .banner{
+    width: 100%;
+    height: 500px;
+    background: linear-gradient(131deg, rgba(59, 0, 126, 0.95) , rgba(2, 2, 2, 0.95) 50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+
+
+.cont, .img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 500px;
+}
+
+.cont{
+    flex-direction: column;
     text-align: justify;
-    transition: all 500ms ease;
+    font-size: 20px;
+    color: white;
+    text-shadow: black;
+    text-shadow: 8px 8px 12px black;
 }
 
-#mision:hover{
-    box-shadow: 0px 0px 35px #668b00;
-    /*transform: translateY(-3%);*/
-    transform:scale(1.01 , 1.01);
+
+.img img{
+    max-width: 100%;
+    max-height: 100%;
+    filter: drop-shadow(0px 0px 20px rgba(255, 255, 255, 0.288));
+    object-fit: cover;
 }
 
-#mision img{
-    width: 25%;
-    float: right;
-    padding-left: 20px;
-    padding-top: 2%;
-}
-
-div #vision{
-    border-radius: 40px;
-    box-shadow: 0px 0px 20px #668b00;
-    line-height: 1.4;
-    text-align: justify;
-    transition: all 500ms ease;
-}
-
-#vision:hover{
-    box-shadow: 0px 0px 35px #668b00;
-    /*transform: translateY(-3%);*/
-    transform:scale(1.01 , 1.01);
-}
-
-#vision img{
-    float: left;
-    width: 200px;
-    padding-right: 20px;
-}
-
-#valores{
-    /*margin-left: 100px;*/
-    border-radius: 20px;
-    box-shadow: 0px 0px 20px #668b00;
-    transition: all 500ms ease;
-}
-
-#valores:hover{
-    box-shadow: 0px 0px 35px #668b00;
-    /*transform: translateY(-3%);*/
-    transform:scale(1.01 , 1.01);
-}
-
-#valores img{
-    width: 22%;
-    float: right;
-    padding-left: 20px;
-    padding-block: 100px;
-}
-
-div #valores ul li{
-    padding-bottom: 10px;
-    line-height: 1.3;
-    text-align: justify;
-}
-
-.card h3{
-    margin-top: 10px;
-    text-align: center;
-    margin-bottom: 25px;
-    font-size: 30px;
-    /* TODO: agregar una fuente que acepte font-weight */
-    font-weight: bolder;
-}
-
-/*Fin del about us*/
 
 /*Pie de Pagina*/
 
@@ -345,7 +267,12 @@ div #valores ul li{
     justify-content: space-between;
 }
 
-.footer-heart{text-align:center;font-family: open sans, sans-serif;}
+.footer-heart{
+    text-align:center;
+    font-family: open sans, sans-serif;
+    bottom: 0;
+}
+
 
 .footer-heart a{color: rgb(250, 180, 50);padding-bottom: .25em; text-decoration: none;}
 
